<resources>
    <string name="app_name" translatable="false">BudgetX</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
</resources>